--- a/4. Sequences, Time Series and Prediction/S+P Week 1 - Lesson 3 - Notebook.ipynb
+++ b/4. Sequences, Time Series and Prediction/S+P Week 1 - Lesson 3 - Notebook.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,13 +78,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.0\n"
+      "2.4.1\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
     "print(tf.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_series(time,series,format=\"-\",start=0,end=None):\n",
+    "    plt.plot(time[start:end],series[start:end])\n",
+    "    plt.xlabel(\"Time\")\n",
+    "    plt.ylabel(\"Value\")\n",
+    "    plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trend(time,slope=0.3):\n",
+    "    series =time *slope\n",
+    "    return series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seasonal_pattern(season_time):\n",
+    "    return np.where(season_time<0.4,np.cos(season_time* 2*np.pi),1/np.exp(3*season_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def noise (time,noise_level=1,seed=None):\n",
+    "    np.random.randn(len(time))"
    ]
   },
   {
@@ -136,10 +192,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
+    "\n",
     "\n",
     "def plot_series(time, series, format=\"-\", start=0, end=None):\n",
     "    plt.plot(time[start:end], series[start:end], format)\n",
